--- a/settings.org
+++ b/settings.org
@@ -254,8 +254,9 @@ I'm still using Helm though another stab at Ivy could be in the near future.
     :config
     (helm-projectile-on))
 #+end_src
+
 ** Dashboard
-I don't really end up using the dashboard, but I'm going to keep it for now.
+
 #+begin_src emacs-lisp
   (use-package dashboard
     :straight t
@@ -276,6 +277,16 @@ sections.
   (use-package key-chord
     :straight t
     :config (key-chord-mode 1))
+#+end_src
+
+** Control how buffers get opened overal
+Still figuring this out. I want find file to consistently open on the bottom
+like it always has. I want C-x 4 f to split only when there's only one window.
+
+First few attempts failed but leavintg this so I can come back to it.
+#+begin_src emacs-lisp :results silent
+        (setq display-buffer-base-action
+              nil)
 #+end_src
 ** Popwin
 Popwin handles the annoying pop up buffers.
@@ -387,7 +398,7 @@ trying to set up forge.
 #+end_src
 * General Tools
 ** Treemacs
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package treemacs
     :straight t
     :defer t
@@ -544,6 +555,16 @@ Setting up org roam to get my notes in order.
   (use-package ob-async
     :straight (ob-async :type git :host github :repo "astahlman/ob-async"))
 #+end_src
+
+*** Trying out a slack markdown export
+
+#+begin_src emacs-lisp :results nil
+  (use-package ox-slack
+    :straight t)
+#+end_src
+
+#+RESULTS:
+
 ** Magit
 #+begin_src emacs-lisp
   (use-package magit
@@ -1259,7 +1280,7 @@ Add a compile and save command.
 This is supposed to be able to be set to the symbol silent to stop popping up a
 warnigns buffer, which is the behavior I would prefer. But I kept getting errors
 so I set it to nil for now.
-U
+
 #+begin_src emacs-lisp :results silent
 (setq native-comp-async-report-warnings-errors nil)
 #+end_src
@@ -1339,7 +1360,7 @@ If this gets any more complicated I'll move it into its own package.
       (concat "[" (upcase prj) "] ")))
 
   (defun my-git-commit-insert-branch ()
-    (when (tradeswell-project-p)
+    (when (tw-project-p)
     (insert (tw-branch-git-subj))))
 
   (add-hook 'git-commit-setup-hook 'my-git-commit-insert-branch)
